fixed home banner alignment

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1008,6 +1008,9 @@ footer {
     background-position: center;
     background-repeat: no-repeat;
     animation: homeAnimation linear infinite 5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     .centeredContent {
       z-index: 2;
       display: flex;
